Bug 403955 - After an action, the cursor returns to top of page and does not remain in a similar position to when action was started
Summary: After an action, the cursor returns to top of page and does not remain in a s...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Mint (Debian based) Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-05 11:47 UTC by Derek
Modified: 2019-02-05 15:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Derek 2019-02-05 11:47:01 UTC
SUMMARY


STEPS TO REPRODUCE
1. Open KMyMoney
2. Go to say Payments (overdue) in Home screen
3. Click on a payment to add to a ledger and complete action
4. Instead of cursor staying in Payments section, it moves up to top of the Home screen.
5. Move cursor back down to Payments (in this example) and continue the loop.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2019-02-05 15:14:03 UTC
Git commit eabc71b5952532bf95ec64c2edce9b1233303e1e by Thomas Baumgart.
Committed on 05/02/2019 at 15:13.
Pushed by tbaumgart into branch '5.0'.

Keep position in home view after entering transaction
FIXED-IN: 5.0.4

M  +14   -4    kmymoney/views/khomeview.cpp
M  +1    -0    kmymoney/views/khomeview.h
M  +9    -11   kmymoney/views/khomeview_p.h

https://commits.kde.org/kmymoney/eabc71b5952532bf95ec64c2edce9b1233303e1e