Keep position in home view after entering transaction

BUG: 403955
FIXED-IN: 5.0.4